center the graph by directly shift to center

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
 <body>
     <svg width="960" height="600" id="svg"></svg>
-    <button id="start" onclick="start()">start</button>
-    <button id="step" onclick="step()">step</button>
+    <div>
+        Input iterations: 
+        <input id="iterations" type="number" max="10000" step="100" value="2000"/>
+        <button id="start" onclick="start()">start</button>
+        <button id="step" onclick="step()">step</button>
+    </div>
 </body>
 
 </html>
