--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div>
         Input iterations: 
         <input id="iterations" type="number" max="10000" step="100" value="2000"/>
-        <button id="start" onclick="start()">start</button>
-        <button id="step" onclick="step()">step</button>
+        <button id="start">start</button>
+        <!-- <button id="stop">stop</button> -->
+        <button id="step">step</button>
     </div>
 </body>
 
