long edge bug fix
remaining issues:
1. not able to stop updating graph
2. did not use json properly, instead, a whole block of text describing the json object is put in the js code

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
   <svg width="960" height="600" id="svg"></svg>
   <div>
-    <button onclick="restart()">restart</button>
-    <button onclick="reset()">reset</button>
+    <button onclick="initializePos()">restart</button>
+    <!-- <button onclick="reset()">reset</button>
     <button onclick="step()">step</button>
     iterations: 
     <input id="inputStep" type="number" value="10" style="width: 50px"/>
-    <button onclick="run()">continue</button>
+    <button onclick="run()">continue</button> -->
   </div>
 </body>
 
