stop updating by decaying alpha factor

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <svg width="960" height="600" id="svg"></svg>
   <div>
-    <button onclick="initializePos()">restart</button>
+    <button onclick="restart()">restart</button>
     <!-- <button onclick="reset()">reset</button>
     <button onclick="step()">step</button>
     iterations: 
