--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
   <script src="main.js"></script>
+  <script>
+    $(document).ready(function () {
+      $.getJSON("https://api.myjson.com/bins/6dtwv", function (graph) {
+        init(graph);
+        run();
+      });
+    });
+  </script>
 </head>
 
 <body>
   <svg width="960" height="600" id="svg"></svg>
   <div>
     <button onclick="restart()">restart</button>
-    <!-- <button onclick="reset()">reset</button>
-    <button onclick="step()">step</button>
-    iterations: 
-    <input id="inputStep" type="number" value="10" style="width: 50px"/>
-    <button onclick="run()">continue</button> -->
   </div>
 </body>
 
